--- a/pango/introduction.mdx
+++ b/pango/introduction.mdx
@@ -8,20 +8,28 @@ icon: 'pencil'
 
 ## What is Pango?
 
-Pango pays you to use your computer - in **cold, hard cash**.
+Pango pays you to use your computer within supported applications.
 
-AI agents that can actually USE your computer - clicking buttons, filling forms, navigating spreadsheets - hit a wall in 2025.
+AI agents that can actually **use** your computer - clicking buttons, filling forms, navigating spreadsheets - hit a wall in 2025.
 
 These "computer use" agents promise to automate your digital work, but they're stuck at 40% success vs 70% human performance.
 
 <img src='/images/pango-2.png' alt='Data Scout illustration' />
 
-More compute ≠ better results when you're training on the same limited datasets.
+More compute ≠ better results when you're training on the same limited SFT (supervised fine-tuning) datasets.
 
-The bottleneck is clear: we need MORE human workflow data.
+The bottleneck is clear: we need more human workflow data.
 
 Pango solves this by paying users for performing daily quests on their computer.
 
+## Resources
+
+- [Computer Use Agents Part I: Landscape, Training, Bottlenecks, and Pango](https://www.chakra.dev/research/computer-use-agents-landscape-training-bottlenecks-and-pango-as-the-future-of-data)
+- [Computer Use Agents Part II: Market Map & Ecosystem Analysis](https://www.chakra.dev/research/computer-use-agents-part-2-market-map-and-ecosystem-analysis)
+- [Pango Sample Dataset](https://huggingface.co/datasets/chakra-labs/pango-sample)
+
 ## How do I get started?
 
-Sign up for the [waitlist](https://www.pango.so/) today. Be first in line when Pango goes live.
+Pango is currently live in private preview. Sign up for the [waitlist](https://www.pango.so/) today.
+
+We're onboarding users in batches and expect to open the product up to a wider release in the next quarter.
